# robot_payload_id

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml
config/: iiwa_id.yaml  one_link_arm_symbolic_id.yaml
config/sweep/: ft_sensor_sdp_data_sweep.yaml  iiwa_id_sweep.yaml  sdp_data_sweep.yaml  sdp_data_sweep_payload_only.yaml
models/: box.sdf  floor.sdf  gripper_payload_box.sdf  iiwa.dmd.yaml  iiwa7_with_box_collision.sdf  iiwa7_with_ft_sensor.dmd.yaml  iiwa7_with_ft_sensor.sdf  iiwa7_with_ft_sensor_scenario.yaml  iiwa7_with_planar_pusher.dmd.yaml  iiwa7_with_wsg.dmd.yaml  iiwa7_with_wsg_welded.dmd.yaml  iiwa7_with_wsg_welded_scenario.yaml  iiwa_base_metal_plate.sdf  iiwa_scenario.yaml  iiwa_with_box_payload.dmd.yaml  iiwa_with_box_payload_scenario.yaml  iiwa_with_obstacles.dmd.yaml  iiwa_with_obstacles_scenario.yaml  iiwa_with_test_object_and_walls.dmd.yaml  iiwa_with_test_object_and_walls_scenario.yaml  iiwa_with_wsg_scenario.yaml  one_link_arm.sdf  one_link_arm.urdf  one_link_arm_with_obstacle.dmd.yaml  package.xml  panda.dmd.yaml  panda_j7.urdf  payload_box.sdf  planar_pusher.sdf  test_object.sdf  thin_wall.sdf  wall.sdf  workspace_box.sdf
robot_payload_id/control/: __init__.py  trajectory.py
robot_payload_id/data/: __init__.py  data_matrix.py  data_matrix_numeric.py  data_matrix_symbolic.py  joint_data.py
robot_payload_id/environment/: __init__.py  arm.py  execution.py  iiwa.py
robot_payload_id/eric_id/: containers.py  dair_pll_inertia.py  drake_torch_autodiff.py  drake_torch_dynamics.py  drake_torch_dynamics_test.py  drake_torch_sys_id.py  drake_torch_sys_id_test.py  friction.py  friction_fit.py  multibody_extras.py  sys_id_param.py
robot_payload_id/optimization/: __init__.py  inertial_param_sdp.py  nevergrad_augmented_lagrangian.py  nevergrad_util.py  optimal_experiment_design.py  optimal_experiment_design_b_spline.py  optimal_experiment_design_base.py  optimal_experiment_design_fourier.py
robot_payload_id/symbolic/: __init__.py  computation.py  environment.py
robot_payload_id/utils/: __init__.py  data.py  dataclasses.py  dataset.py  filtering.py  inertia.py  inertia_params.py  param_getters.py  plant_param_setters.py  utils.py
scripts/: average_joint_data.py  benchmark_id_algorithms.py  collect_joint_data.py  compute_and_save_symbolic_data_matrix.py  compute_min_outer_ellipsoid.py  compute_payload_id_metrics.py  concatenate_joint_data.py  create_bspline_traj_from_fourier_series.py  debug_condition_number_gradients.py  design_optimal_excitation_trajectories.py  drake_torch_sys_id_test.py  evaluate_traj_torque_error.py  extract_data_matrix.py  generate_target_traj.py  identify_grasped_object_payload.py  identify_model.py  identify_one_model.py  identify_robot_at_multiple_gripper_oppenings.py  iiwa_teleop.py  naive_inertia_from_m_com_and_geom.py  optimal_experiment_design.py  parallel_sweep.sh  parallel_sweep_supercloud.sh  process_joint_data.py  solve_ft_sensor_payload_param_sdp.py  solve_inertial_param_sdp.py  symbolic_diff.py  symbolic_id.py  visualize_inertial_ellipsoids.py  visualize_model.py  visualize_trajectory.py
