[tool.poetry]
name = "robot-payload-id"
version = "0.1.0"
description = "Identifying object inertial properties using a robot arm"
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# drake = {version = ">=0.0.20240409", source = "drake-nightly"}
drake = "^1.28.0"
numpy = "^1.25.2"
manipulation = {git = "https://github.com/RussTedrake/manipulation.git", rev = "a2d393fdad5e6079db53b0c4e749e2a7fbc935b0"}
iiwa_setup = {git = "https://github.com/nepfaff/iiwa_setup.git", rev="f0d5bbfc8378313bb88721e13cb909928e9ff31f"}
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
ipython = "^8.15.0"
pyyaml = "^6.0.1"
torch = {version = "2.0.1", source = "torch_cuda118"}
pybind11 = "^2.11.1"
scipy = "^1.11.4"
wandb = "^0.16.0"
plotly = "^5.18.0"
sympy = "^1.12"
nevergrad = "^1.0.1"
matplotlib = "^3.8.2"
nlopt = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"
ipykernel = "^6.29.3"

[[tool.poetry.source]]
name = "torch_cuda118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "supplemental"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['robot_payload_id']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
