[tool.poetry]
name = "robot-payload-id"
version = "0.1.0"
description = "Identifying object inertial properties using a robot arm"
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# drake = { version = ">=0.0.20250118 <1.0", source = "drake-nightly" }
drake = "<=1.36.0" # Drake 1.37.0 is causing segfaults atm...
numpy = "^2.0.0"
manipulation = "^2025.2.16"
iiwa_setup = {git = "https://github.com/nepfaff/iiwa_setup.git"}
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
ipython = "^8.15.0"
pyyaml = "^6.0.1"
torch = "^2.0.1"
pybind11 = "^2.11.1"
scipy = "^1.11.4"
wandb = "^0.17.2"
plotly = "^5.18.0"
sympy = "^1.12"
nevergrad = "^1.0.1"
matplotlib = "^3.8.2"
nlopt = "^2.7.1"
open3d = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
poetry-pre-commit-plugin = "^0.1.2"
ipykernel = "^6.29.3"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "supplemental"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
known_first_party = ['robot_payload_id']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
